add flyway and data